content/vault/v1.4.x/content/docs/commands/kv/undelete.mdx
---
layout: docs
page_title: kv undelete - Command
sidebar_title: <code>undelete</code>
description: |-
  The "kv undelete" command undeletes the data for the provided version and path
  in the key-value store. This restores the data, allowing it to be returned on
  get requests.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-02T14:43:40-05:00
last_modified: 2025-07-25T10:39:53-07:00
# END AUTO GENERATED METADATA
---

# kv undelete

~> **NOTE:** This is a [K/V Version 2](/vault/docs/secrets/kv/kv-v2) secrets
engine command, and not available for Version 1.

The `kv undelete` command undoes the deletes of the data for the provided version
and path in the key-value store. This restores the data, allowing it to be
returned on get requests.

## Examples

Undelete version 3 of the key "creds":

```text
$ vault kv undelete -versions=3 secret/creds
Success! Data written to: secret/undelete/creds
```

## Usage

There are no flags beyond the [standard set of flags](/vault/docs/commands)
included on all commands.

### Output Options

- `-format` `(string: "table")` - Print the output in the given format. Valid
  formats are "table", "json", or "yaml". This can also be specified via the
  `VAULT_FORMAT` environment variable.

### Command Options

- `-versions` `([]int: <required>)` - Specifies the version number that should
  be made current again.
